--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Emanuel Bitencourt</title>
+
+  <title>Emanuel Bitencourt | Desenvolvedor de Software</title>
+
+  <meta name="title" content="Emanuel Bitencourt | Desenvolvedor de Software (React, TypeScript, JavaScript)" />
+  <meta name="description" content="Desenvolvedor de Software especialista em React, TypeScript e JavaScript. Portfólio profissional com experiências, projetos e contato. Atuação em interfaces modernas, performance e qualidade de código." />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Emanuel Bitencourt" />
+  <link rel="canonical" href="https://emanuelbitencourt.com.br/" />
+
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+  <meta name="theme-color" content="#0b1020" />
+
+
+  <meta property="og:locale" content="pt_BR" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Emanuel Bitencourt" />
+  <meta property="og:title" content="Emanuel Bitencourt | Desenvolvedor Frontend (React, TypeScript, JavaScript)" />
+  <meta property="og:description" content="Desenvolvedor Frontend especialista em React, TypeScript e JavaScript. Portfólio profissional com experiências, projetos e contato." />
+  <meta property="og:url" content="https://emanuelbitencourt.com.br/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Emanuel Bitencourt | Desenvolvedor Frontend (React, TypeScript, JavaScript)" />
+  <meta name="twitter:description" content="Desenvolvedor Frontend especialista em React, TypeScript e JavaScript. Portfólio profissional com experiências, projetos e contato." />
+
+  <link rel="alternate" href="https://emanuelbitencourt.com.br/" hreflang="pt-BR" />
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Emanuel Bitencourt",
+      "jobTitle": "Desenvolvedor Frontend",
+      "description": "Desenvolvedor Frontend especialista em React, TypeScript e JavaScript. Experiência em interfaces modernas, performance e qualidade de código.",
+      "url": "https://emanuelbitencourt.com.br/",
+      "sameAs": [
+        "https://www.linkedin.com/in/emanuelbitencourt/",
+        "https://github.com/EmanuelBitenc"
+      ],
+      "email": "mailto:emanuelmagalhaes3m@gmail.com",
+      "knowsAbout": [
+        "React",
+        "TypeScript",
+        "JavaScript",
+        "Front-end",
+        "Desenvolvimento Web",
+        "UI/UX",
+        "Integração de APIs"
+      ]
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Emanuel Bitencourt | Portfólio",
+      "url": "https://emanuelbitencourt.com.br/"
+    }
+  </script>
 </head>
 
 <body>
